Fix layout jumping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,3 +56,14 @@
   will-change: transform, scale, opacity;
   transform: translateY(4rem) scale(0.93);
 }
+
+.preload {
+  overflow: hidden;
+}
+
+.preload * {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -ms-transition: none !important;
+  -o-transition: none !important;
+}
